<resources>
    <string name="app_name">Blood Support - YRC</string>


    <!--Registration Section Strings -->
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string name="register">Register</string>
    <string name="addr">Area Name</string>
    <string name="chooseblood">Choose Blood type</string>


    <string name="donorguideliines">http://indianbloodbank.com/donors-guidelines.html</string>


    <!--Firebase Database References-->
    <string name="db_users_field">Users</string>
    <string name="BDprefix">BD</string>
    <string name="title_activity_home">Home</string>


    <string name="action_settings">Settings</string>
    <string name="title_location_permission">Location Permissiom</string>
    <string name="text_location_permission">This app requires location permission</string>
    <string name="settings">Settings</string>
    <string name="permission_denied_explanation">We need your loc</string>
    <string name="permission_rationale">We need location bro</string>
    <string name="RadioButtonMale">Male</string>
    <string name="RadioButtonFemale">Female</string>
    <string name="Gender">Gender</string>
    <string name="choosegender">Gender</string>
    <string name="grantlocperm">Grant Location permission</string>
    <string name="title_activity_home_user">HomeUser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Location">Location</string>
    <string name="btn_search">Search</string>
    <string name="samplename">Name of the person</string>
    <string name="image_of_the_user">Image of the user</string>
    <string name="distanceaway">100 metres away</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <!-- Setting Preferences Strings-->
    <string name="app_version">1.0</string>
    <string name="title_version">Version 1.1</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="summary_support">Got queries</string>
    <string name="key_send_feedback">SendFeedBack</string>
    <string name="summary_faq">About US</string>
    <string name="title_faq">About us</string>
    <string name="url_faq">http://www.wwe.com</string>
    <string name="Keyaccountdetails">AccountDetails</string>


    <string name="choose_email_client">Choose Email Client</string>
    <string name="summary_about">
    The Youth Red Cross of Easwari Engineering college aims to serve the society and encourage the youth community to actively participate in social service.
    </string>

    <string name="keycontactus">Contact Us</string>
    <string name="contactusdesc">Questions? Need help?</string>
    <string name="contactustitle">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.wwe.com/privacypolicy</string>
    <string name="key_appinfo">appinfo</string>


    <string name="Blood_Units">Units</string>
    <string name="personal_details">Personal Details</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="ButtonSubmit">Submit</string>
    <string name="details_of_request">Details of Request</string>
    <string name="edit_request">Edit Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="Cancel">Cancel</string>
    <string name="cancelcontent">Are you sure you want to cancel the request?</string>
    <string name="agree">Yeah</string>
    <string name="disagree">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>


    <string name="copyrights_u00a9">copyrights © 2018</string>
    <string name="t_amp_amp_c"><![CDATA[t&c]]></string>
    <string name="_5_kms">5 kms</string>
    <string name="donatedbloodrecently">Donated Blood ?</string>
    <string name="yeah">Yeah</string>
    <string name="Donation">Donation</string>
    <string name="Hospital">Hospital name</string>
    <string name="dateofdonation">Donated Date</string>
    <string name="keylastdonateddate">lastdonateddate</string>
    <string name="admin">Admin</string>
    <string name="Nooftimesdonated">No of times Donated</string>
    <string name="share">Share</string>
    <string name="NoDonations">No Requests Available.</string>
    <string name="NoPosts">No posts Found</string>
    <string name="recentDonation">You donated on</string>
    <string name="search_for_people">Search For People</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="AddaPost">Add a post</string>
    <string name="posttitle">Enter Post Title</string>
    <string name="postdesc">Enter Post Description</string>
    <string name="postcontent">Enter post content</string>
    <string name="upload">Upload</string>
    <string name="checkdetails">User Details</string>
    <string name="dbfieldmobilenumber">mobilenumber</string>
    <string name="call">call</string>
    <string name="sendmessage">Message</string>
    <string name="about">About</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="nointernetmessage">No Internet Check your Connection and Try Again</string>
    <string name="logout">Logout</string>
    <string name="applink">https://play.google.com/store/apps/details?id=com.atribus.bloodbankyrc</string>
    <string name="type_here_for_autocomplete">Type here for AutoComplete</string>
    <string name="Locationauto">Enter Location</string>
    <string name="openwithbrowser">Open browser</string>
    <string name="postdetails">Post Details</string>
    <string name="total_posts_count">Total Posts Count</string>
    <string name="pending_request_count">Pending Requests Count</string>
    <string name="requestsdetails">Requests details</string>
    <string name="Successful_request_count">Success Requests Count</string>
    <string name="Gottheblood">Have you received the blood?</string>
    <string name="gottheblooddesc">Is the blood donation successful?</string>
    <string name="totalnumberofusers">Active Users Count</string>
    <string name="Userdetails">User Details</string>
    <string name="blood_groups">Blood Groups</string>
    <string name="imgdesc_nopostowl">No Post Image</string>
    <string name="you_can_donate_again_in">You can donate again in:</string>
    <string name="_18_02_2018">18/02/2018</string>
    <string name="last_donated_on">Last Donated On:</string>
    <string name="thanks_for_donation">Thanks for Donation!</string>
    <string name="LeaderBoard">Leader Board</string>
    <string name="posturl">Enter Post URL</string>
    <string name="i_agree_to_terms_and_conditions">I agree to Terms And Conditions</string>
    <string name="terms_and_conditions"><u><b><i>Terms And Conditions</i></b></u></string>
    <string name="imageforsignup">imageforsignup</string>
    <string name="TermsandPolicies"><![CDATA[Terms & Policies]]></string>
    <string name="TermsandPoliciesLongtext">For a better experience, while using our Service, I may require you
    to    provide us with certain personally
     identifiable information, including but not limited to Name
     ,Email Address, Age, Date Of Birth, Location,Blood Group, Gender.
      The information that I request are used for good and will not be sold or used in a bad way.</string>
    <string name="description">Description</string>

    <string name="postlayoutimg">postlayoutimg</string>
    <string name="arun_hours_ago">arun hours ago</string>
    <string name="YettoBegin">Yet to begin.</string>
    <string name="dbfieldbloodgroup">bloodgroup</string>
    <string name="aboutarun">It’s not about ideas. It’s about making ideas happen.</string>
    <string name="arun_image">arun image</string>
    <string name="appdevelopername">Arun Sudharsan</string>
    <string name="githublink">https://github.com/Arunm619/</string>
    <string name="fblink">https://www.facebook.com/Arunm619</string>
    <string name="contactArun">Contact</string>
    <string name="bloodbankwebsite">https://goo.gl/phWCYc</string>
    <string name="supermanimgonappinfoact">supermanimg</string>
    <string name="facebook">Facebook</string>
    <string name="github">Github</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="nooftimesdonatedsampletextfiller">1  You have saved 3 people.</string>
    <string name="users_analytics">Users Analytics</string>
    <string name="abpos">AB+</string>
    <string name="_0">0</string>
    <string name="abneg">AB-</string>
    <string name="bpos">B+</string>
    <string name="bneg">B-</string>
    <string name="apos">A+</string>
    <string name="aneg">A-</string>
    <string name="opos">O+</string>
    <string name="oneg">O-</string>
    <string name="imageforpostdetailed">imageforpostdetailed</string>
    <string name="title">Title</string>
    <string name="description_about_the_given_title">Description about the given title</string>
    <string name="long_title">Long Title</string>
    <string name="testdata">Test</string>
    <string name="testdatamobile">1234567890</string>
    <string name="testdatabloodgroup">O+</string>
    <string name="testdataunits">2 units</string>
    <string name="testdatahospitalname">Malar Fortis</string>
    <string name="testdatamessage">Urgent in 2 hours</string>
    <string name="testdatacomplete">Complete</string>
    <string name="enter_location_hospital_name">Enter Location (Hospital name)</string>


</resources>
