<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Accoun details Edit Profile-->
    <PreferenceCategory android:title="Account">


        <Preference
            android:key="@string/Keyaccountdetails"
            android:selectable="true"
            android:summary="Account Details">

        </Preference>


    </PreferenceCategory>


    <PreferenceCategory android:title="About">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />


        <Preference
            android:key="@string/keycontactus"
            android:summary="@string/contactusdesc"
            android:title="@string/contactustitle" />

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference
            android:key="@string/key_appinfo"
            android:title="App info">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>


    </PreferenceCategory>
</PreferenceScreen>