<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atribus.bloodbankyrc.EditProfile">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:typeface="serif" />

            <!--NAME-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_name"
                app:met_iconPadding="0dp"
                app:met_maxCharacters="15" />

            <!--Mobile number-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_phone"
                app:met_iconPadding="0dp"

                />
            <!--Date of Birth-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_of_birth"
                app:met_floatingLabel="normal"
                app:met_iconLeft="@drawable/ic_dob"
                app:met_iconPadding="0dp" />

            <!--Gender-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/Gender"
                app:met_floatingLabel="normal"
                app:met_iconLeft="@drawable/ic_gender"
                app:met_iconPadding="0dp" />


            <!-- Blood Group-->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_bloodgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/blood_group"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_blood"
                app:met_iconPadding="0dp" />

            <!--Address -->
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addr"
                android:visibility="gone"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/ic_address"
                app:met_iconPadding="0dp"
                app:met_maxCharacters="100" />

            <LinearLayout
                android:id="@+id/llforautocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="0.1"
                    android:contentDescription="@string/Location"
                    android:src="@drawable/ic_location" />

                <AutoCompleteTextView
                    android:id="@+id/et_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="10dp"
                    android:layout_weight="0.9"
                    android:hint="@string/Locationauto" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_update"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
