<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context="com.atribus.bloodbankyrc.Fragments.RequestBlood">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--Requested blood-->
            <RelativeLayout
                android:id="@+id/rlrequestedblood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="08dp"
                    android:visibility="visible"
                    card_view:cardCornerRadius="2dp"
                    card_view:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/reqtv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/details_of_request"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/testdata"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

                            />

                        <TextView
                            android:id="@+id/tvmobile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/testdatamobile"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

                            />


                        <TextView
                            android:id="@+id/tvblood"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/testdatabloodgroup"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                        <TextView
                            android:id="@+id/tvbloodunits"
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/testdataunits"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                        <TextView
                            android:id="@+id/tvlocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/testdatahospitalname"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

                            />

                        <TextView
                            android:id="@+id/tvmessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:text="@string/testdatamessage"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

                            />

                        <LinearLayout
                            android:id="@+id/llbtns"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"

                            android:weightSum="2">

                            <Button
                                android:id="@+id/btnEdit"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"

                                android:layout_weight="1"
                                android:text="@string/edit_request" />

                            <Button
                                android:id="@+id/btnCancelreq"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"

                                android:layout_weight="1"
                                android:text="@string/cancel_request" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/btnSuccess"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/testdatacomplete" />


                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>
            <!--Request Blood-->
            <RelativeLayout
                android:id="@+id/rlrequestblood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/llblooddetails"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <!-- Blood Group-->
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_bloodgroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:hint="@string/blood_group"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_blood"
                        app:met_iconPadding="0dp" />

                    <!-- Blood Units-->
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_bloodunits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:hint="@string/Blood_Units"
                        android:inputType="number"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_units"
                        app:met_iconPadding="0dp"
                        app:met_maxCharacters="1" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llNamedetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/llblooddetails"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <!--NAME-->
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/et_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/full_name"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_name"
                        app:met_iconPadding="0dp"
                        app:met_maxCharacters="20" />


                </LinearLayout>


                <!--Mobile number-->
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llNamedetails"
                    android:focusable="false"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/ic_phone"
                    app:met_iconPadding="0dp"

                    />


                <!--Location -->
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_mobilenumber"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/Location"
                    android:visibility="gone"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/ic_location"
                    app:met_iconPadding="0dp" />

                <LinearLayout
                    android:id="@+id/llforautocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_location"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="0.1"
                        android:src="@drawable/ic_location"
                        android:contentDescription="@string/Location" />

                    <AutoCompleteTextView
                        android:id="@+id/et_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_margin="10dp"
                        android:layout_weight="0.9"
                        android:hint="@string/enter_location_hospital_name" />
                </LinearLayout>
                <!--et_message -->
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"


                    android:layout_height="wrap_content"
                    android:layout_below="@id/llforautocomplete"

                    android:hint="@string/message"
                    app:met_floatingLabel="highlight"
                    app:met_iconLeft="@drawable/ic_message"
                    app:met_iconPadding="0dp"
                    app:met_maxCharacters="50" />


                <Button
                    android:id="@+id/btn_request"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_message"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/ButtonSubmit" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
