<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lt_signin"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"

        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"

            android:textColor="@android:color/white"
            android:typeface="sans" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"

            android:contentDescription="@string/imageforsignup"
            android:src="@drawable/logo" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"

        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/i_agree_to_terms_and_conditions"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_termsandconditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/white"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>